@@ -85,6 +85,7 @@ extern WandExport MagickBooleanType
   DrawClearException(DrawingWand *),
   DrawComposite(DrawingWand *,const CompositeOperator,const double,const double,
     const double,const double,MagickWand *),
+  DrawGetFontResolution(const DrawingWand *,double *,double *),
   DrawGetStrokeAntialias(const DrawingWand *),
   DrawGetTextAntialias(const DrawingWand *),
   DrawPopPattern(DrawingWand *),
@@ -95,6 +96,7 @@ extern WandExport MagickBooleanType
   DrawSetFillPatternURL(DrawingWand *,const char *),
   DrawSetFont(DrawingWand *,const char *),
   DrawSetFontFamily(DrawingWand *,const char *),
+  DrawSetFontResolution(DrawingWand *,const double,const double),
   DrawSetStrokeDashArray(DrawingWand *,const size_t,const double *),
   DrawSetStrokePatternURL(DrawingWand *,const char *),
   DrawSetVectorGraphics(DrawingWand *,const char *),
